# clang-tidy-custom-checks

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
cmake/: CPM.cmake  CPM_dependencies.cmake  conan_config.cmake  create_optimization_flags.cmake  create_warnings_list.cmake  default_options.cmake  enable_static_analysis.cmake  index.cmake
scripts/: launch_clang_format.sh  launch_cmake_format.sh  optional_cpp_tools_install.sh
src/: CMakeLists.txt  CustomClangTidyChecks.cpp  main.cpp
src/IllegalFunctionNames/: CMakeLists.txt  IllegalFunctionNames.cpp  IllegalFunctionNames.hh
src/IllegalVariableNames/: CMakeLists.txt  IllegalVariableNames.cpp  IllegalVariableNames.hh
src/factorial/: CMakeLists.txt  factorial.cpp
src/prime/: CMakeLists.txt
test/: CMakeLists.txt  test_utils.hh  tests.cpp
test/IllegalVariableNames/: CMakeLists.txt  IllegalVariableNamesTests.cpp
test/IllegalVariableNames/test_code/: class_with_forbidden_variable.cpp  class_with_forbidden_variable_with_leading_m.cpp  class_with_forbidden_variable_with_leading_m_and_trailing_underscore.cpp  class_with_forbidden_variable_with_leading_m_and_trailing_underscore_fixed.cpp  class_with_forbidden_variable_with_leading_m_fixed.cpp  class_with_forbidden_variable_with_trailing_underscore.cpp  main_with_forbidden_variable_fixed.cpp
